--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "popper.js": "^1.14.5",
     "rxjs": "~6.3.3",
     "rxjs-compat": "^6.3.3",
-    "sweetalert2": "^7.29.0",
+    "sweetalert2": "^7.29.1",
     "validate": "^4.5.1",
     "web-animations-js": "^2.3.1",
     "zone.js": "~0.8.26"
@@ -52,7 +52,7 @@
     "@angular/language-service": "~7.0.0",
     "@types/bootstrap": "^4.1.2",
     "@types/chartist": "^0.9.43",
-    "@types/jasmine": "~2.8.8",
+    "@types/jasmine": "^2.8.12",
     "@types/jasminewd2": "~2.0.3",
     "@types/jquery": "^3.3.22",
     "@types/node": "~8.9.4",
