--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
+    "@types/moment": "^2.13.0",
     "angular-calendar": "^0.26.4",
+    "angular-moment": "^1.3.0",
     "animate.css": "^3.7.0",
     "bootstrap": "^4.1.3",
     "bootstrap-material-design": "^4.1.1",
