--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@angular/forms": "~7.0.0",
     "@angular/http": "~7.0.0",
     "@angular/material": "^7.0.4",
+    "@angular/material-moment-adapter": "^7.3.7",
     "@angular/platform-browser": "~7.0.0",
     "@angular/platform-browser-dynamic": "~7.0.0",
     "@angular/router": "~7.0.0",
@@ -36,7 +37,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.3.1",
     "jquery-validation": "^1.18.0",
-    "moment": "^2.22.2",
+    "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
     "perfect-scrollbar": "^1.4.0",
     "popper.js": "^1.14.5",
