--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "chartist-plugin-zoom": "^0.4.1",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
-    "jquery": "^3.3.1",
+    "jquery": "^3.4.1",
     "jquery-validation": "^1.18.0",
     "moment": "^2.24.0",
     "moment-timezone": "^0.5.23",
@@ -49,9 +49,9 @@
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.0",
-    "@angular/cli": "~7.0.6",
-    "@angular/compiler-cli": "~7.0.0",
+    "@angular-devkit/build-angular": "^0.13.9",
+    "@angular/cli": "^7.3.9",
+    "@angular/compiler-cli": "^7.2.15",
     "@angular/language-service": "~7.0.0",
     "@types/bootstrap": "^4.1.2",
     "@types/chartist": "^0.9.43",
